# egraph_isa_compiler_codesign

./: .gitignore  .gitmodules  ASIP_PARALLEL_IMPLEMENTATION.md  CLUSTER_ASIP_GUIDE.md  NRE_USAGE_GUIDE.md  README.md  analyze_all_variants.py  analyze_program_similarity.py  analyze_unique_instructions.py  base.egg  build_cluster_asips.py  clustering_results.json  code_size.csv  convert_to_reduction_pct.py  convert_to_reduction_pct_vs_original.py  full_new.objdump  instruction_counts.csv  instruction_counts_enhanced.csv  map.py  multi_k_clustering.json  parse_code_size.py  parse_instruction_counts.py  parse_results.py  parse_results_power.py  plot_pareto_grid.py  pyproject.toml  results_normalized.csv  results_normalized_power.csv  results_reduction_pct.csv  results_reduction_vs_original.csv  results_summary_power.csv  results_summary_power_m1.csv  results_summary_power_m2.csv  run_batch.sh  run_k_parallel.sh  run_multi_scale_variants.sh  run_multi_scale_variants_old.sh  run_multi_scale_variants_sequential.sh  run_pipeline.sh  run_step.sh  (+6 more)
Extractor/: README.md  run_extractor.sh
SSA/: .gitignore  README.md  analyze_blocks.py  analyze_defuse.py  analyze_liveness.py  basicmath_small_O0.dump  build_cfg.py  convert_to_ssa.py  output.txt  parse_sections.py  process_dump.py  split_basic_blocks.py  strip_prefixes.py  test_all_tools.sh  util.py  view_liveness.py
Saturation/: 4_ssa.txt  5_ssa.txt  README.md  base.egg  base.egg.backup_20251104_145757  base.egg.backup_20251105_171949  base_base.egg  base_injected_revised copy.egg  data_structure.py  debug_seq.egg  example.egg  (+8 more)
(+3079 files in other folders)
